Squashed commit of the following:
commit 512367bccd25e8a165ae1241d09b2e81b631b097
Author: pt010104 <hisokaxxzk@gmail.com>
Date:   Thu Dec 12 23:38:34 2024 +0700

    Fix detail + Update User
    Optimize Media service

commit 6c85e266d3a89d6d95d25274be4e4d7736445377
Author: nguyen2192004 <phamgianguyen.qn@gmail.com>
Date:   Thu Dec 12 18:49:04 2024 +0700

    update avatar

commit 4940d635130305267456c50ab6d0ad2495202482
Merge: c0f6c20 44bbeb9
Author: nguyen2192004 <phamgianguyen.qn@gmail.com>
Date:   Thu Dec 12 14:56:35 2024 +0700

    Merge branch 'master' of https://github.com/pt010104/api-golang into media-queue

commit c0f6c20d33976f0b4d752103f09cee24bfbcc8c9
Merge: 174316d 2ba760b
Author: pt010104 <hisokaxxzk@gmail.com>
Date:   Thu Dec 12 00:04:42 2024 +0700

    Merge branch 'master' of github.com:pt010104/api-golang into media-queue

commit 174316d3e685b9ce8436651c19f1c66f3b7d2656
Author: pt010104 <hisokaxxzk@gmail.com>
Date:   Sun Dec 8 15:32:59 2024 +0700

    Full flow for upload image

commit 7aa6a0e9ce67de0cef838ba56b50fd1e84924db9
Author: pt010104 <hisokaxxzk@gmail.com>
Date:   Sun Dec 8 14:08:53 2024 +0700

    Add consumer server

commit 2081416d3f3aa8d9ecb3acf548bb15d7626c17ed
Author: pt010104 <hisokaxxzk@gmail.com>
Date:   Sun Dec 8 13:20:53 2024 +0700

    Add usecase for media
